# MusicThing

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/metadata/: scanner.rs
src/components/: AlbumView.tsx  Header.tsx  MusicLibrary.tsx  Welcome.tsx
