[package]
name = "musicthing"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

default-run = "musicthing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "musicthing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.20.1"
symphonia = { version = "0.5.4", features = ["flac"] }
walkdir = "2.5.0"
base64 = "0.22.1"
lofty = "0.22.4"
tauri-plugin-dialog = "2"
